<resources>
    <string name="app_name">Friender</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="telephone">Telephone</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="empty_list_message">Contact list empty</string>
    <string name="contact_added_message">Contact %1$s added successfully</string>
    <string name="title_activity_list">Friender</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_add_person">Add Contact</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="name_label">Name</string>
    <string name="address_label">Address</string>
    <string name="telephone_label">Telephone</string>
    <string name="main_title">friender</string>
    <string name="subtitle">maRking friends</string>
    <string name="refreshing">Refreshing...</string>
</resources>
